Deduplicate logarithmic applicability schemas