@@ -7,7 +7,6 @@ import de.regelsuche.ast.Expr;
 import de.regelsuche.ast.FunctionExpr;
 import de.regelsuche.parse.ExpressionFormatter;
 import de.regelsuche.transform.PatternExpr;
-import de.regelsuche.transform.RecognitionProfile;
 import de.regelsuche.transform.RequiredAssumptionTemplate;
 import de.regelsuche.transform.RewriteApplicabilitySchema;
 import de.regelsuche.transform.RewriteApplicabilitySchemaProvider;
@@ -15,17 +14,7 @@ import de.regelsuche.transform.RewriteKind;
 import de.regelsuche.transform.RewriteRule;
 import java.util.List;
 
-/**
- * Curated logarithm rewrite rules.
- *
- * <p>Identities like {@code log(a*b) -> log(a) + log(b)} only hold when
- * arguments are positive. Each rule surfaces those side conditions via
- * {@link RewriteRule#assumptions(Expr)}.</p>
- *
- * <p>{@code log} and {@code ln} are treated as the same function family —
- * the same identities apply structurally regardless of base, and both
- * names are supported.</p>
- */
+/** Curated logarithm rewrite rules with explicit domain assumptions. */
 public final class LogarithmicRules {
     private LogarithmicRules() {
     }
@@ -39,13 +28,11 @@ public final class LogarithmicRules {
             new LogPowerRule("log"),
             new LogPowerRule("ln"),
             new LogOfOneRule("log"),
-            new LogOfOneRule("ln")
-        );
+            new LogOfOneRule("ln"));
     }
 
-    /** {@code log(a*b) -> log(a) + log(b)} with {@code a > 0} and {@code b > 0}. */
-    static final class LogProductRule
-            implements RewriteRule, RewriteApplicabilitySchemaProvider {
+    /** {@code log(a*b) -> log(a) + log(b)} with {@code a > 0, b > 0}. */
+    static final class LogProductRule implements RewriteApplicabilitySchemaProvider {
         private final String name;
 
         LogProductRule(String name) {
@@ -91,8 +78,7 @@ public final class LogarithmicRules {
             return new BinaryExpr(
                 new FunctionExpr(name, product.left()),
                 BinaryOperator.ADD,
-                new FunctionExpr(name, product.right())
-            );
+                new FunctionExpr(name, product.right()));
         }
 
         @Override
@@ -103,48 +89,37 @@ public final class LogarithmicRules {
         @Override
         public List<Assumption> assumptions(Expr subtree) {
             BinaryExpr product = extract(subtree);
-            if (product == null) {
-                return List.of();
-            }
-            return List.of(
+            return product == null ? List.of() : List.of(
                 Assumption.positive(ExpressionFormatter.format(product.left())),
-                Assumption.positive(ExpressionFormatter.format(product.right()))
-            );
+                Assumption.positive(ExpressionFormatter.format(product.right())));
         }
 
         @Override
         public RewriteApplicabilitySchema applicabilitySchema() {
             PatternExpr left = PatternExpr.var("A");
             PatternExpr right = PatternExpr.var("B");
-            return new RewriteApplicabilitySchema(
-                "algorithmic-source/v1:" + id(),
-                this,
+            return exactSource(
                 PatternExpr.fn(name,
                     PatternExpr.op(BinaryOperator.MUL, left, right)),
-                RecognitionProfile.exact(),
-                List.of(
-                    RequiredAssumptionTemplate.positive(left),
-                    RequiredAssumptionTemplate.positive(right)));
+                RequiredAssumptionTemplate.positive(left),
+                RequiredAssumptionTemplate.positive(right));
         }
 
         private BinaryExpr extract(Expr subtree) {
-            if (!(subtree instanceof FunctionExpr functionExpr) || !functionExpr.name().equals(name)) {
+            if (!(subtree instanceof FunctionExpr function)
+                    || !function.name().equals(name)
+                    || function.arguments().size() != 1) {
                 return null;
             }
-            if (functionExpr.arguments().size() != 1) {
-                return null;
-            }
-            if (functionExpr.arguments().get(0) instanceof BinaryExpr inner
-                && inner.operator() == BinaryOperator.MUL) {
-                return inner;
-            }
-            return null;
+            return function.arguments().getFirst() instanceof BinaryExpr inner
+                    && inner.operator() == BinaryOperator.MUL
+                ? inner
+                : null;
         }
     }
 
-    /** {@code log(a/b) -> log(a) - log(b)} with {@code a > 0} and {@code b > 0}. */
-    static final class LogQuotientRule
-            implements RewriteRule, RewriteApplicabilitySchemaProvider {
+    /** {@code log(a/b) -> log(a) - log(b)} with {@code a > 0, b > 0}. */
+    static final class LogQuotientRule implements RewriteApplicabilitySchemaProvider {
         private final String name;
 
         LogQuotientRule(String name) {
@@ -190,8 +165,7 @@ public final class LogarithmicRules {
             return new BinaryExpr(
                 new FunctionExpr(name, quotient.left()),
                 BinaryOperator.SUB,
-                new FunctionExpr(name, quotient.right())
-            );
+                new FunctionExpr(name, quotient.right()));
         }
 
         @Override
@@ -202,48 +176,37 @@ public final class LogarithmicRules {
         @Override
         public List<Assumption> assumptions(Expr subtree) {
             BinaryExpr quotient = extract(subtree);
-            if (quotient == null) {
-                return List.of();
-            }
-            return List.of(
+            return quotient == null ? List.of() : List.of(
                 Assumption.positive(ExpressionFormatter.format(quotient.left())),
-                Assumption.positive(ExpressionFormatter.format(quotient.right()))
-            );
+                Assumption.positive(ExpressionFormatter.format(quotient.right())));
         }
 
         @Override
         public RewriteApplicabilitySchema applicabilitySchema() {
             PatternExpr numerator = PatternExpr.var("A");
             PatternExpr denominator = PatternExpr.var("B");
-            return new RewriteApplicabilitySchema(
-                "algorithmic-source/v1:" + id(),
-                this,
+            return exactSource(
                 PatternExpr.fn(name,
                     PatternExpr.op(BinaryOperator.DIV, numerator, denominator)),
-                RecognitionProfile.exact(),
-                List.of(
-                    RequiredAssumptionTemplate.positive(numerator),
-                    RequiredAssumptionTemplate.positive(denominator)));
+                RequiredAssumptionTemplate.positive(numerator),
+                RequiredAssumptionTemplate.positive(denominator));
         }
 
         private BinaryExpr extract(Expr subtree) {
-            if (!(subtree instanceof FunctionExpr functionExpr) || !functionExpr.name().equals(name)) {
+            if (!(subtree instanceof FunctionExpr function)
+                    || !function.name().equals(name)
+                    || function.arguments().size() != 1) {
                 return null;
             }
-            if (functionExpr.arguments().size() != 1) {
-                return null;
-            }
-            if (functionExpr.arguments().get(0) instanceof BinaryExpr inner
-                && inner.operator() == BinaryOperator.DIV) {
-                return inner;
-            }
-            return null;
+            return function.arguments().getFirst() instanceof BinaryExpr inner
+                    && inner.operator() == BinaryOperator.DIV
+                ? inner
+                : null;
         }
     }
 
     /** {@code log(a^k) -> k*log(a)} with {@code a > 0}. */
-    static final class LogPowerRule
-            implements RewriteRule, RewriteApplicabilitySchemaProvider {
+    static final class LogPowerRule implements RewriteApplicabilitySchemaProvider {
         private final String name;
 
         LogPowerRule(String name) {
@@ -289,8 +252,7 @@ public final class LogarithmicRules {
             return new BinaryExpr(
                 power.right(),
                 BinaryOperator.MUL,
-                new FunctionExpr(name, power.left())
-            );
+                new FunctionExpr(name, power.left()));
         }
 
         @Override
@@ -301,43 +263,36 @@ public final class LogarithmicRules {
         @Override
         public List<Assumption> assumptions(Expr subtree) {
             BinaryExpr power = extract(subtree);
-            if (power == null) {
-                return List.of();
-            }
-            return List.of(Assumption.positive(ExpressionFormatter.format(power.left())));
+            return power == null
+                ? List.of()
+                : List.of(Assumption.positive(
+                    ExpressionFormatter.format(power.left())));
         }
 
         @Override
         public RewriteApplicabilitySchema applicabilitySchema() {
             PatternExpr base = PatternExpr.var("A");
-            PatternExpr exponent = PatternExpr.var("K");
-            return new RewriteApplicabilitySchema(
-                "algorithmic-source/v1:" + id(),
-                this,
-                PatternExpr.fn(name,
-                    PatternExpr.op(BinaryOperator.POW, base, exponent)),
-                RecognitionProfile.exact(),
-                List.of(RequiredAssumptionTemplate.positive(base)));
+            return exactSource(
+                PatternExpr.fn(name, PatternExpr.op(
+                    BinaryOperator.POW, base, PatternExpr.var("K"))),
+                RequiredAssumptionTemplate.positive(base));
         }
 
         private BinaryExpr extract(Expr subtree) {
-            if (!(subtree instanceof FunctionExpr functionExpr) || !functionExpr.name().equals(name)) {
+            if (!(subtree instanceof FunctionExpr function)
+                    || !function.name().equals(name)
+                    || function.arguments().size() != 1) {
                 return null;
             }
-            if (functionExpr.arguments().size() != 1) {
-                return null;
-            }
-            if (functionExpr.arguments().get(0) instanceof BinaryExpr inner
-                && inner.operator() == BinaryOperator.POW) {
-                return inner;
-            }
-            return null;
+            return function.arguments().getFirst() instanceof BinaryExpr inner
+                    && inner.operator() == BinaryOperator.POW
+                ? inner
+                : null;
         }
     }
 
     /** {@code log(1) -> 0}. */
-    static final class LogOfOneRule
-            implements RewriteRule, RewriteApplicabilitySchemaProvider {
+    static final class LogOfOneRule implements RewriteApplicabilitySchemaProvider {
         private final String name;
 
         LogOfOneRule(String name) {
@@ -374,7 +329,7 @@ public final class LogarithmicRules {
             return subtree instanceof FunctionExpr fn
                 && fn.name().equals(name)
                 && fn.arguments().size() == 1
-                && fn.arguments().get(0) instanceof de.regelsuche.ast.NumberExpr n
+                && fn.arguments().getFirst() instanceof de.regelsuche.ast.NumberExpr n
                 && n.value().equalsInteger(1);
         }
 
@@ -388,12 +343,7 @@ public final class LogarithmicRules {
 
         @Override
         public RewriteApplicabilitySchema applicabilitySchema() {
-            return new RewriteApplicabilitySchema(
-                "algorithmic-source/v1:" + id(),
-                this,
-                PatternExpr.fn(name, PatternExpr.num(1)),
-                RecognitionProfile.exact(),
-                List.of());
+            return exactSource(PatternExpr.fn(name, PatternExpr.num(1)));
         }
     }
 }
